# WebDevUniversityProject

./: .coverage  .coveragerc  .gitignore  README.md  alembic.ini  api_documentation.yaml  audiences.html  audiences_style.css  commands  config.py  create_tables  index.html  launch.py  login_style.css  main.py  models.py  profile.html  profile_style.css  pyproject.toml  routes.py  sign_up.html  sign_up_style.css  test_app.py
alembic/: env.py
alembic/versions/: 52ee00826f47_.py  55a9a73fea63_.py  757ec5543d22_.py
controllers/: audience_controller.py  reservation_controller.py  user_controller.py
htmlcov/: approject___init___py.html  config_py.html  controllers___init___py.html  controllers_audience_controller_py.html  controllers_reservation_controller_py.html  controllers_user_controller_py.html  index.html  launch_py.html  models_py.html  status.json
static/css/: login_style.css  sign_up_style.css
static/js/: audiences.js  login.js  sign_up.js
templates/: audiences.html  login.html  profile.html  sign_up.html
tests/: test_audience.py  test_reservation.py  test_user.py
